add path utils and jest test tools

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "types": [
-      "@cloudflare/workers-types"
+      "@cloudflare/workers-types",
+      "@types/node",
+      "@types/jest"
     ]
   },
   "include": [
