--- a/package.json
+++ b/package.json
@@ -5,21 +5,31 @@
   },
   "description": "WebDAV supports for Google Drive using Cloudflare Workers",
   "devDependencies": {
-    "typescript": "^4.0.5",
-    "webpack": "^5.3.2",
+    "@cloudflare/workers-types": "^2.1.0",
+    "@types/jest": "^26.0.18",
+    "@types/node": "^14.14.10",
+    "jest": "^26.6.3",
+    "node-fetch": "^2.6.1",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.7",
-    "@cloudflare/workers-types": "^2.1.0"
+    "typescript": "^4.0.5",
+    "webpack": "^5.3.2"
   },
   "homepage": "https://github.com/SunYufei/gdrive-webdav-cfworkers#readme",
   "license": "MIT",
   "main": "./dist/index.js",
-  "name": "gdrive-webdav-cfworkers",
+  "name": "workers-dav-gdrive",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SunYufei/gdrive-webdav-cfworkers.git"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest",
+    "test-c": "jest --coverage"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "version": "1.0.0"
 }
