--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
    "author": "SunYufei",
    "description": "WebDAV supports for Google Drive using Cloudflare Workers",
    "devDependencies": {
-      "@cloudflare/workers-types": "3.x",
-      "@types/jest": "27.x",
-      "jest": "27.x",
-      "prettier": "2.x",
-      "ts-jest": "27.x",
-      "ts-loader": "8.x",
-      "typescript": "4.x",
-      "webpack": "5.x",
-      "webpack-cli": "4.x"
+      "@cloudflare/workers-types": "3",
+      "@types/jest": "27",
+      "jest": "27",
+      "prettier": "2",
+      "ts-jest": "27",
+      "ts-loader": "8",
+      "typescript": "4",
+      "webpack": "5",
+      "webpack-cli": "4"
    },
    "homepage": "https://github.com/SunYufei/workers-dav#readme",
    "license": "MIT",
@@ -31,8 +31,7 @@
    },
    "scripts": {
       "build": "wrangler build",
-      "format": "prettier --write  '*.{json,js}' 'src/**/*.{json,js,ts}' 'test/**/*.{js,ts}'",
-      "dev": "miniflare dist/worker.js --watch",
+      "format": "prettier --write  *.{json,js} src/**/*.{json,js,ts} test/**/*.{js,ts}",
       "publish": "wrangler publish",
       "preview": "wrangler preview --watch",
       "test": "jest"
