--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
+   "version": "0.2.0",
    "author": "SunYufei",
    "description": "WebDAV supports for Google Drive using Cloudflare Workers",
+   "homepage": "https://github.com/SunYufei/workers-dav#readme",
+   "name": "workers-dav",
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/SunYufei/workers-dav.git"
+   },
+   "scripts": {
+      "dev": "wrangler dev --local",
+      "format": "prettier --write  *.{json,js} src/**/*.{json,js,ts} test/**/*.{js,ts}",
+      "prod": "wrangler publish",
+      "test": "jest"
+   },
    "devDependencies": {
       "@cloudflare/workers-types": "3",
-      "@types/jest": "27",
-      "jest": "27",
+      "@miniflare/core": "2",
       "prettier": "2",
-      "ts-jest": "27",
-      "ts-loader": "8",
-      "typescript": "4",
-      "webpack": "5",
-      "webpack-cli": "4"
+      "wrangler": "2"
    },
-   "homepage": "https://github.com/SunYufei/workers-dav#readme",
-   "license": "MIT",
-   "main": "dist/worker.js",
-   "name": "workers-dav",
    "prettier": {
       "printWidth": 80,
       "quoteProps": "preserve",
@@ -25,16 +29,5 @@
       "trailingComma": "es5",
       "useTabs": false
    },
-   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/SunYufei/workers-dav.git"
-   },
-   "scripts": {
-      "build": "wrangler build",
-      "format": "prettier --write  *.{json,js} src/**/*.{json,js,ts} test/**/*.{js,ts}",
-      "publish": "wrangler publish",
-      "preview": "wrangler preview --watch",
-      "test": "jest"
-   },
-   "version": "0.1.0"
+   "license": "MIT"
 }
