--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
    "compilerOptions": {
       "module": "CommonJS",
-      "target": "ES6",
-      "lib": ["ES6"],
+      "target": "ES2020",
+      "lib": ["ES2020"],
       "alwaysStrict": true,
       "strict": true,
       "preserveConstEnums": true,
@@ -11,7 +11,7 @@
       "removeComments": true,
       "resolveJsonModule": true,
       "sourceMap": true,
-      "types": ["@cloudflare/workers-types", "@types/jest"]
+      "types": ["@cloudflare/workers-types"]
    },
    "include": ["src"],
    "exclude": ["node_modules", "test", "dist", "worker"]
