--- a/package.json
+++ b/package.json
@@ -4,30 +4,20 @@
    "description": "WebDAV supports for Google Drive using Cloudflare Workers",
    "homepage": "https://github.com/SunYufei/workers-dav#readme",
    "name": "workers-dav",
+   "private": true,
    "repository": {
       "type": "git",
       "url": "git+https://github.com/SunYufei/workers-dav.git"
    },
    "scripts": {
-      "dev": "wrangler dev --local",
-      "format": "prettier --write  *.{json,js} src/**/*.{json,js,ts} test/**/*.{js,ts}",
-      "prod": "wrangler publish",
+      "dev": "wrangler dev",
+      "deploy": "wrangler deploy",
       "test": "jest"
    },
    "devDependencies": {
-      "@cloudflare/workers-types": "3",
-      "@miniflare/core": "2",
-      "prettier": "2",
-      "wrangler": "2"
-   },
-   "prettier": {
-      "printWidth": 80,
-      "quoteProps": "preserve",
-      "semi": false,
-      "singleQuote": true,
-      "tabWidth": 3,
-      "trailingComma": "es5",
-      "useTabs": false
+      "@cloudflare/workers-types": "4",
+      "jest": "29",
+      "wrangler": "3"
    },
    "license": "MIT"
 }
