--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
    "compilerOptions": {
-      "module": "CommonJS",
-      "target": "ES2020",
-      "lib": ["ES2020"],
-      "alwaysStrict": true,
+      "module": "ES2022",
+      "target": "ES2022",
+      "lib": ["ES2022"],
       "strict": true,
       "preserveConstEnums": true,
       "moduleResolution": "Node",
@@ -11,8 +10,9 @@
       "removeComments": true,
       "resolveJsonModule": true,
       "sourceMap": true,
+      "typeRoots": ["node_modules"],
       "types": ["@cloudflare/workers-types"]
    },
-   "include": ["src"],
+   "include": ["src/**/*.ts"],
    "exclude": ["node_modules", "test", "dist", "worker"]
 }
